1.12/examples/out/aws-iam-authenticator-chart.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: aws-iam-authenticator
    chart: aws-iam-authenticator-0.1.1
    heritage: dhall
    release: wintering-rodent
  name: wintering-rodent-aws-iam-authenticator
spec:
  selector:
    matchLabels:
      app: aws-iam-authenticator
      release: wintering-rodent
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
      labels:
        app: aws-iam-authenticator
        release: wintering-rodent
      name: aws-iam-authenticator
    spec:
      containers:
        - args:
            - server
            - "--config=/etc/aws-iam-authenticator/config.yaml"
            - "--state-dir=/var/aws-iam-authenticator"
            - "--generate-kubeconfig=/etc/kubernetes/aws-iam-authenticator/kubeconfig.yaml"
          image: gcr.io/heptio-images/authenticator:v0.1.0
          name: wintering-rodent-aws-iam-authenticator
          volumeMounts:
            - mountPath: /etc/aws-iam-authenticator/
              name: config
            - mountPath: /var/aws-iam-authenticator/
              name: state
            - mountPath: /etc/kubernetes/aws-iam-authenticator/
              name: output
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: ''
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: CriticalAddonsOnly
          key: Exists
      volumes:
        - configMap:
            name: wintering-rodent-aws-iam-authenticator
          name: config
        - hostPath:
            path: /srv/kubernetes/aws-iam-authenticator/
          name: output
        - hostPath:
            path: /srv/kubernetes/aws-iam-authenticator/
          name: state
  updateStrategy:
    type: RollingUpdate
